--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matt-harrell.github.io",
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://matt-harrell.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
