--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -10,16 +10,16 @@
             "thumbnail":"herdicon.jpg",
             "main":"herdphone.png"
         },
-        "projectLinks":{
-            "gitHub":{
-                "link":"https://github.com/matt-harrell/Have-you-Herd-",
-                "text":"GitHub"
+        "projectLinks":[
+            {
+            "link":"https://github.com/matt-harrell/Have-you-Herd-",
+            "text":"GitHub"
             },
-            "website":{
-                "link":"https://github.com/matt-harrell/Have-you-Herd-",
-                "text":"Have You Heard?"
+            {
+            "link":"https://herd.matthharrell.com/",
+            "text":"Have You Heard?"
             }
-        },
+        ],
         "skills":[
             "HTML",
             "CSS",
@@ -41,16 +41,13 @@
         "images":{
             "thumbnail":"switchCodepen.jpg"
         },
-        "projectLinks":{
-            "gitHub":{
-                "link":"https://github.com/matt-harrell/Have-you-Herd-",
-                "text":"GitHub"
-            },
-            "website":{
-                "link":"https://github.com/matt-harrell/Have-you-Herd-",
-                "text":"Have You Heard?"
-            }
-        }
+        "skills":[
+            "HTML",
+            "CSS",
+            "JavaScript",
+            "JQuery",
+            "GreenSock"
+        ]
     },
     {
         "title": {
