--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,6 +1,33 @@
 [
     {
         "title": {
+            "thumbnail":"Song Profiler",
+            "page":"Song Profiler"
+        },
+        "introSentence":"A React app using song data from Spotify.",
+        "description":"This app will show the users top songs and the Spotify audio profile for each song. This app uses 5 categories to show the audio profile for each song.",
+        "images":{
+            "thumbnail":"Song profiler logo.jpg"
+        },
+        "video":{
+            "demo":"https://www.youtube.com/embed/PB0JbyY5fK4"
+        },
+        "projectLinks":[
+            {
+            "link":"https://github.com/matt-harrell/song-profiler",
+            "text":"GitHub"
+            }
+        ],
+        "skills":[
+            "React",
+            "Redux",
+            "D3",
+            "Material UI",
+            "API"
+        ]
+    },
+    {
+        "title": {
             "thumbnail":"DND Encounter Creator",
             "page":"DND Encounter Creator"
         },
@@ -23,33 +50,6 @@
         "skills":[
             "React",
             "Redux",
-            "Material UI",
-            "API"
-        ]
-    },
-    {
-        "title": {
-            "thumbnail":"Song Profiler",
-            "page":"DND Encounter Creator"
-        },
-        "introSentence":"A React app using song data from Spotify",
-        "description":"This app will show the users top songs and the Spotify audio profile for each song. This app uses 5 categories to show the audio profile for each song.",
-        "images":{
-            "thumbnail":"Song profiler logo.jpg"
-        },
-        "video":{
-            "demo":"https://www.loom.com/embed/4cdfbc2b8ff245179218c8081a1d309f"
-        },
-        "projectLinks":[
-            {
-            "link":"https://github.com/matt-harrell/song-profiler",
-            "text":"GitHub"
-            }
-        ],
-        "skills":[
-            "React",
-            "Redux",
-            "D3",
             "Material UI",
             "API"
         ]
