--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -10,7 +10,7 @@
             "thumbnail":"Song profiler logo.jpg"
         },
         "video":{
-            "demo":"https://www.youtube.com/embed/PB0JbyY5fK4"
+            "demo":"https://www.youtube.com/embed/fh1XDPrXqdo"
         },
         "projectLinks":[
             {
