--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "gh-pages": "^4.0.0",
+    "html-react-parser": "^3.0.13",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.4.2",
