--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -5,7 +5,7 @@
             "page":"Song Profiler"
         },
         "introSentence":"A React app using song data from Spotify.",
-        "description":"This app will show the users top songs and the Spotify audio profile for each song. This app uses 5 categories to show the audio profile for each song.",
+        "description":"This app shows the users top songs and the Spotify audio profile for each song.This app uses 5 categories to show the audio profile for each song.<br><br><em>Unfortunately Spotify’s API policy does not allow automatic user onboarding for portfolio projects/hobby projects. This means I have to manually add users to the app in order for them to be authenticated through Spotify. If you wish to preview the app please fill out my <a href='./../#contactForm'>contact form</a> and I will add you as a user as soon as possible. </em>",
         "images":{
             "thumbnail":"Song profiler logo.jpg"
         },
